# env-tui

./: .SRCINFO  .gitignore  LICENSE  PKGBUILD  README.md  config.py  env_tui.css  env_tui.py  pyproject.toml  shell_utils.py  ui.py
